bridge text layout bug fixed

--- a/src/assets/scss/modules/_mobile-xl.scss
+++ b/src/assets/scss/modules/_mobile-xl.scss
@@ -146,10 +146,6 @@
     gap: 250px 0;
   }
 
-  .texts_row .text_item {
-    width: auto;
-  }
-
   .animation_vector1,
   .animation_vector2,
   .animation_vector3,
